[package]
authors = ["Internet Security Research Group"]
edition = "2018"
name = "facilitator"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2"
avro-rs = { version = "0.13.0", features = ["snappy"] }
backoff = "0.3.0"
base64 = "0.13.0"
bytes = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.3"
derivative = "2.1.1"
dyn-clone = "1.0.4"
elliptic-curve = { version = "0.10.3", features = ["pem"] }
hex = "0.4"
hmac = "0.11"
http = "^0.2"
hyper = "^0.14"
hyper-rustls = "^0.22"
jsonwebtoken = "7"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = "0.57.0"
kube-runtime = "0.57.0"
p256 = "0.9.0"
pem = "0.8"
pkix = "0.1.1"
prio = "0.4.0"
prometheus = "0.12"
rand = "0.8"
ring = { version = "0.16.20", features = ["std"] }
rusoto_core = { version = "^0.46", default_features = false, features = ["rustls"] }
rusoto_mock = { version = "^0.46", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "^0.46", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "^0.46", default_features = false, features = ["rustls"] }
rusoto_sts = { version = "^0.46", default_features = false, features = ["rustls"] }
sha2 = "0.9"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.6.0"
slog-json = "2.3.0"
slog-term = "2.8.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1.0"
thiserror = "1.0"
tokio = { version = "^1.7", features = ["full"] }
ureq = { version = "^2.1", features = ["json"] }
url = "2.2.2"
urlencoding = "1.3.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "^0.3"
xml-rs = "0.8"

[dev-dependencies]
assert_matches = "1.5.0"
mockito = "0.30.0"
serde_test = "1.0"
