[package]
authors = ["Internet Security Research Group"]
edition = "2018"
name = "facilitator"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2"
avro-rs = { version = "0.13.0", features = ["snappy"] }
backoff = "0.4.0"
base64 = "0.13.0"
bitvec = "1"
bytes = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.34.0"
derivative = "2.1.1"
dyn-clone = "1.0.4"
elliptic-curve = { version = "0.11.12", features = ["pem"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "^0.2"
hyper = "^0.14"
hyper-rustls = { version = "^0.23", features = ["http2"] }
jsonwebtoken = "8"
lazy_static = "1"
p256 = "0.10.1"
pem = "1.0"
pkix = "0.1.2"
prio = "0.5.0"
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
regex = "^1.5.4"
ring = { version = "0.16.20", features = ["std"] }
rusoto_core = { version = "^0.47", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "^0.47", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "^0.47", default_features = false, features = ["rustls"] }
rusoto_sts = { version = "^0.47", default_features = false, features = ["rustls"] }
sha2 = "0.10"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-json = "2.5.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
thiserror = "1.0"
timer = "0.2"
tokio = { version = "^1.16", features = ["full"] }
tracing = "0.1.30"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.8", features = ["env-filter", "json"] }
ureq = { version = "^2.4", features = ["json"] }
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "^0.3"
xml-rs = "0.8"

[dev-dependencies]
assert_matches = "1.5.0"
hex = "0.4.3"
mockito = "0.30.0"
rusoto_mock = { version = "^0.47", default_features = false, features = ["rustls"] }
serde_test = "1.0"
