[package]
authors = ["Internet Security Research Group"]
edition = "2021"
name = "facilitator"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2"
avro-rs = { version = "0.13.0", features = ["snappy"] }
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.0"
bitvec = "1"
bytes = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.34.0"
derivative = "2.1.1"
dyn-clone = "1.0.11"
elliptic-curve = { version = "0.13.2", features = ["pem"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "^0.2"
hyper = "^0.14"
hyper-rustls = { version = "^0.23", features = ["http2"] }
jsonwebtoken = "8"
lazy_static = "1"
p256 = "0.13.0"
pem = "1.1"
pkix = "0.2.1"
prio = { version = "0.11.0", features = ["prio2"] }
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
ring = { version = "0.16.20", features = ["std"] }
rusoto_core = { version = "^0.48", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "^0.48", default_features = false, features = ["rustls"] }
rusoto_sns = { version = "^0.48", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "^0.48", default_features = false, features = ["rustls"] }
rusoto_sts = { version = "^0.48", default_features = false, features = ["rustls"] }
sha2 = "0.10"
signal-hook = "0.3.15"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.4.0"
thiserror = "1.0"
timer = "0.2"
tokio = { version = "^1.26", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
trycmd = "0.14.13"
ureq = { version = "^2.6", features = ["json"] }
url = "2.3.1"
urlencoding = "2.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "^0.3"
xml-rs = "0.8"

[dev-dependencies]
assert_matches = "1.5.0"
hex = "0.4.3"
mockito = "1.0.0"
regex = "^1.7.1"
rusoto_mock = { version = "^0.48", default_features = false, features = ["rustls"] }
serde_test = "1.0"
